yax/manuscript/v4/tables/table1_anatomy_of_ai_exposure_measures.md
**Analysis status: CONFIRMATORY — FROZEN YAX v1.1.**

| Measure | Primitive | Capability source / labeler | Aggregation | Interpretation | Primary source |
|---|---|---|---|---|---|
| AIOE (three aggregation variants) | AI application × occupational ability | Electronic Frontier Foundation applications; MTurk judgments | Ability exposure × occupation-specific ability weights | Potential occupational exposure to advances in general AI applications | Felten, Raj, and Seamans (2018, 2021) |
| Eloundou alpha (E1) | LLM capability × occupational task | Human and GPT-4 task judgments | Share of tasks directly accelerated by an LLM | Direct LLM task-time-reduction potential | Eloundou et al. (2024) |
| Eloundou beta (E1 + 0.5 E2) | LLM capability × occupational task | Human and GPT-4 task judgments | Directly exposed tasks plus half weight on software-complemented tasks | LLM potential allowing complementary software | Eloundou et al. (2024) |
| Eloundou broad (E1 + E2) | LLM capability × occupational task | Human and GPT-4 task judgments | All directly or software-complemented exposed tasks | Broad upper-bound LLM exposure (published zeta; repository gamma alias) | Eloundou et al. (2024) |

**Note.** Frozen v1.1 values. Reported confidence intervals and p-values use the one-step occupation-cluster wild-score procedure. Where applicable, inference conditions on realized CPS weighted employment-stock cells and does not separately propagate first-stage survey-sampling or calibration-weight uncertainty.
